[gd_scene load_steps=9 format=3 uid="uid://chu683w32bnw5"]

[ext_resource type="Script" path="res://personaje_2.gd" id="1_nssxd"]
[ext_resource type="Texture2D" uid="uid://chqib0hwwsl6r" path="res://icon.svg" id="2_ltmp7"]
[ext_resource type="Texture2D" uid="uid://i0idcbhtsyhs" path="res://cursor_finger.png" id="3_by1ot"]

[sub_resource type="Animation" id="Animation_fdf2x"]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(26, -28), Vector2(75, -107)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tredm"]
_data = {
"recibir_dano": SubResource("Animation_fdf2x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwysk"]
size = Vector2(129, 130)

[sub_resource type="Animation" id="Animation_h66l7"]
resource_name = "atacar"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-29, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7wca0"]
_data = {
"atacar": SubResource("Animation_h66l7")
}

[node name="Personaje_2" type="Node2D" groups=["personaje_2"]]
position = Vector2(474, 395)
script = ExtResource("1_nssxd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ltmp7")

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
offset_left = 26.0
offset_top = -28.0
offset_right = 81.0
offset_bottom = -2.0
text = "2"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tredm")
}

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.929412, 0, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = -110.0
offset_right = 74.0
offset_bottom = -83.0
grow_horizontal = 2
show_percentage = false

[node name="cursor" type="Sprite2D" parent="."]
visible = false
position = Vector2(-125, 26)
texture = ExtResource("3_by1ot")

[node name="Area2d" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2d"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_pwysk")

[node name="animacion_atacar" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7wca0")
}

[connection signal="mouse_shape_entered" from="Area2d" to="." method="_on_cursor_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="Area2d" to="." method="_on_cursor_mouse_shape_exited"]
[connection signal="animation_finished" from="animacion_atacar" to="." method="_on_animacion_atacar_animation_finished"]
